Validaciones e implementacion de formulario

--- a/pacepal_SinLaravel/pages/auth/login.html
+++ b/pacepal_SinLaravel/pages/auth/login.html
@@ -63,6 +63,7 @@
               required
               autocomplete="email"
             />
+          </div>
           <!-- Contraseña -->
           <div class="campo mb-4 input-group password-group">
             <label for="login-password" class="form-label">Contraseña</label>
