--- a/pacepal_SinLaravel/index.html
+++ b/pacepal_SinLaravel/index.html
@@ -50,7 +50,7 @@
           <ul class="navbar-nav ms-auto align-items-center">
             <li class="nav-item">
               <a class="nav-link nav-link-animate" href="#problema"
-                >El Problema</a
+                >¿Por qué PacePal?</a
               >
             </li>
             <li class="nav-item">
